--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .header{
-  height: 200px;
+  height: 200px;  
   width: 100%;
   background-color : #E9EEF6;
   padding-top: 50px;
+  margin: 100;
 }
+
 
 .card-container{
   height: 300px;
